--- a/wordpress/wp-content/themes/zuvys/package.json
+++ b/wordpress/wp-content/themes/zuvys/package.json
@@ -1,7 +1,6 @@
 {
   "name": "zuvys",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "laravel-mix": "^6.0.10"
-  }
+  },
+  "dependencies": {},
+  "description": ""
 }
